@@ -1,3 +1,6 @@
+2010-03-15 Andrew Schofield <andrew@fire-salamander.co.uk>
+* Added "new" project menu item.
+
 2010-03-12 Andrew Schofield <andrew@fire-salamander.co.uk>
 * Added extra filters to file dialogs to prompt on overwrite etc.
 
